# cygwin-cross-utils

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: EnableCFlag.cmake
cross-toolchain/: CMakeLists.txt  cross-cmake.c  cross-cmake.conf  cross-configure  cross-post-install  toolchain.cmake.in
crosstool-ng/: .config  README.md  ct-config
shared/: CMakeLists.txt  dynarray.c  dynarray.h  shared.c  shared.h  strarray.h  strbuf.c  strbuf.h  strutil.c  strutil.h
